--- a/serve/templates/inc/banner_block.html
+++ b/serve/templates/inc/banner_block.html
@@ -1,4 +1,4 @@
-{% load wagtailcore_tags wagtailimages_tags %}
+<!-- {% load wagtailcore_tags wagtailimages_tags %}
 {% block content %}
     {% image self.banner_image width-1600 as img %}
     <div class="hero-banner" style="background-image: url('{{ img.url }}');"></div>
@@ -10,4 +10,4 @@
             <a class="btn btn-primary btn-lg" href="{{ self.url }}" role="button">Learn more</a>
         {% endif %}
     </div>
-{% endblock %}
+{% endblock %} -->
