--- a/serve/templates/base.html
+++ b/serve/templates/base.html
@@ -1,4 +1,6 @@
-{% load static wagtailuserbar %}
+{% load static wagtailuserbar menus_tags %}
+
+{% get_menu "main-navigation" as nav %}
 
 <!DOCTYPE html>
 <html class="no-js" lang="en">
@@ -21,7 +23,7 @@
         <link rel="stylesheet" href="https://bootswatch.com/4/cerulean/bootstrap.min.css" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
         <script src="https://kit.fontawesome.com/f57d88cbfd.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" type="text/css" href="{% static 'css/demo.css' %}">
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     </head>
     <body class="{% block body_class %}{% endblock %}">
         {% wagtailuserbar %}
@@ -33,40 +35,31 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarColor01">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
+                {% for item in nav.menu_items.all %}
+                  <li class="nav-item"><a class="nav-link" href="{{ item.link }}" {% if item.open_in_new_tab %}target="_blank"{% endif %}>{{ item.title }}</a></li>
+                {% endfor %}
+              </ul>
+              <ul class="social-menu navbar-nav">
+                  {% if settings.core.SocialMediaSettings.facebook %}
+                    <li><a class="nav-link" href="{{ settings.core.SocialMediaSettings.facebook }}"><i class="fab fa-facebook-square"></i></a></li>
+                  {% endif %}
+                  {% if settings.core.SocialMediaSettings.twitter %}
+                    <li><a class="nav-link" href="{{ settings.core.SocialMediaSettings.twitter }}"><i class="fab fa-twitter-square"></i></a></li>
+                  {% endif %}
+                  {% if settings.core.SocialMediaSettings.youtube %}
+                    <li><a class="nav-link" href="{{ settings.core.SocialMediaSettings.youtube }}"><i class="fab fa-youtube-square"></i></a></li>
+                  {% endif %}
+                  {% if settings.core.SocialMediaSettings.google %}
+                    <li><a class="nav-link" href="{{ settings.core.SocialMediaSettings.google }}"><i class="fab fa-google-plus-square"></i></a></li>
+                  {% endif %}
+                  {% if settings.core.SocialMediaSettings.pinterest %}
+                    <li><a class="nav-link" href="{{ settings.core.SocialMediaSettings.pinterest }}"><i class="fab fa-pinterest-square"></i></a></li>
+                  {% endif %}
+                  {% if settings.core.SocialMediaSettings.linkedin %}
+                  <li><a class="nav-link" href="{{ settings.core.SocialMediaSettings.linkedin }}"><i class="fab fa-linkedin"></i></a></li>
+                  {% endif %}
               </ul>
               <form class="form-inline my-2 my-lg-0">
-                <ul class="social-menu navbar-nav">
-                    {% if settings.home.SocialMediaSettings.facebook %}
-                      <li><a class="nav-link" href="{{ settings.home.SocialMediaSettings.facebook }}"><i class="fab fa-facebook-square"></i></a></li>
-                    {% endif %}
-                    {% if settings.home.SocialMediaSettings.twitter %}
-                      <li><a class="nav-link" href="{{ settings.home.SocialMediaSettings.twitter }}"><i class="fab fa-twitter-square"></i></a></li>
-                    {% endif %}
-                    {% if settings.home.SocialMediaSettings.youtube %}
-                      <li><a class="nav-link" href="{{ settings.home.SocialMediaSettings.youtube }}"><i class="fab fa-youtube-square"></i></a></li>
-                    {% endif %}
-                    {% if settings.home.SocialMediaSettings.google %}
-                      <li><a class="nav-link" href="{{ settings.home.SocialMediaSettings.google }}"><i class="fab fa-google-plus-square"></i></a></li>
-                    {% endif %}
-                    {% if settings.home.SocialMediaSettings.pinterest %}
-                      <li><a class="nav-link" href="{{ settings.home.SocialMediaSettings.pinterest }}"><i class="fab fa-pinterest-square"></i></a></li>
-                    {% endif %}
-                    {% if settings.home.SocialMediaSettings.linkedin %}
-                    <li><a class="nav-link" href="{{ settings.home.SocialMediaSettings.linkedin }}"><i class="fab fa-linkedin"></i></a></li>
-                    {% endif %}
-                </ul>
                 <input class="form-control mr-sm-2" type="text" placeholder="Search">
                 <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
               </form>
@@ -83,27 +76,6 @@
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
             </div>
-            <div class="card text-white bg-secondary mb-3" style="max-width: 20rem;">
-            <div class="card-header">Header</div>
-            <div class="card-body">
-                <h4 class="card-title">Secondary card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            </div>
-            <div class="card text-white bg-success mb-3" style="max-width: 20rem;">
-            <div class="card-header">Header</div>
-            <div class="card-body">
-                <h4 class="card-title">Success card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            </div>
-            <div class="card text-white bg-danger mb-3" style="max-width: 20rem;">
-            <div class="card-header">Header</div>
-            <div class="card-body">
-                <h4 class="card-title">Danger card title</h4>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-            </div>
         </footer>
         {# Global javascript #}
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -111,6 +83,5 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-        <script type="text/javascript" src="{% static 'js/demo.js' %}"></script>
     </body>
 </html>
